--- a/css/style.css
+++ b/css/style.css
@@ -142,14 +142,14 @@ body._lock {
 }
 
 .header__top {
-  top: 30px;
+  top: 20px;
   position: relative;
 }
 
 .header__top.sticky {
   position: fixed;
   top: 0;
-  padding: 0 15px;
+  padding: 10px 15px;
   left: 50%;
   -webkit-transform: translate(-50%);
       -ms-transform: translate(-50%);
@@ -283,7 +283,7 @@ body._lock {
   font-weight: 400;
   font-size: 48px;
   margin-bottom: 11px;
-  max-width: 675px;
+  max-width: 628px;
 }
 
 .header__text {
@@ -415,11 +415,11 @@ body._lock {
 }
 
 .skills__progress--html {
-  width: 70%;
+  width: 80%;
 }
 
 .skills__progress--css {
-  width: 60%;
+  width: 70%;
 }
 
 .skills__progress--js {
@@ -496,6 +496,14 @@ body._lock {
   color: #2352DE;
 }
 
+.works__item {
+  margin-bottom: 20px;
+}
+
+.works__item:last-child {
+  margin-bottom: 0;
+}
+
 .works__btn {
   font-family: "OpenSans", sans-serif;
   font-weight: 600;
@@ -531,21 +539,10 @@ body._lock {
 .works__box {
   display: inline-block;
   margin: 0 37px 37px 0;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
 }
 
 .works__box:nth-child(3n) {
   margin-right: 0;
-}
-
-.works__box:hover {
-  -webkit-box-shadow: 0 0 5px 0px #ccc;
-          box-shadow: 0 0 5px 0px #ccc;
-  -webkit-transform: translateY(-5px);
-      -ms-transform: translateY(-5px);
-          transform: translateY(-5px);
 }
 
 .works__link {
@@ -695,12 +692,23 @@ body._lock {
 }
 
 .results__item {
-  width: 280px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  max-width: 280px;
+  max-height: 287px;
+  width: 100%;
   background-color: #F6F6F8;
   border: 1px solid #DBDBED;
-  padding: 149px 30px 48px;
-  text-align: center;
-  position: relative;
+  padding: 50px 30px 48px;
   margin-right: 14px;
 }
 
@@ -713,25 +721,22 @@ body._lock {
 .results__item--coffe::before,
 .results__item--review::before {
   content: "";
+  display: block;
   background-image: url(../img/icons/works.svg);
-  position: absolute;
   width: 97px;
   height: 80px;
-  top: 49px;
-  left: 50%;
-  -webkit-transform: translate(-50%);
-      -ms-transform: translate(-50%);
-          transform: translate(-50%);
 }
 
 .results__item--clients::before {
   background-image: url(../img/icons/clients.svg);
-  width: 92px;
+  width: 91px;
+  height: 80px;
 }
 
 .results__item--coffe::before {
   background-image: url(../img/icons/coffee.svg);
   width: 80px;
+  height: 80px;
 }
 
 .results__item--review::before {
@@ -742,7 +747,7 @@ body._lock {
 .results__text {
   font-size: 18px;
   line-height: 1.3;
-  margin-bottom: 20px;
+  padding-top: 20px;
 }
 
 .results__quantity {
@@ -750,6 +755,7 @@ body._lock {
   font-size: 44px;
   font-weight: 600;
   line-height: 1;
+  padding-top: 20px;
 }
 
 .contact {
@@ -771,10 +777,6 @@ body._lock {
   margin-bottom: 30px;
   line-height: 1.6;
   max-width: 531px;
-}
-
-.contact__box span {
-  color: #2352DE;
 }
 
 .contact__list {
@@ -824,15 +826,12 @@ body._lock {
 }
 
 .social__link {
-  width: 60px;
-  height: 60px;
+  width: 44px;
+  height: 44px;
   display: inline-block;
   -webkit-transition: all 0.5s;
   -o-transition: all 0.5s;
   transition: all 0.5s;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .social__link:hover {
@@ -973,23 +972,25 @@ body._lock {
 }
 
 .footer {
-  background-color: #343740;
-  padding: 20px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #343740;
+  padding: 20px 0;
 }
 
 .footer .logo {
-  -webkit-transition: opacity 0.5s;
-  -o-transition: opacity 0.5s;
-  transition: opacity 0.5s;
+  width: 100px;
+  height: 100px;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .footer .logo:hover {
@@ -1006,6 +1007,14 @@ body._lock {
 }
 
 @media (max-width: 1200px) {
+  .container--works {
+    max-width: 830px;
+  }
+
+  .container--results {
+    max-width: 700px;
+  }
+
   .skills__photo {
     margin-right: 20px;
   }
@@ -1013,8 +1022,6 @@ body._lock {
   .services__inner {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
   }
 
   .services__item {
@@ -1027,6 +1034,23 @@ body._lock {
 
   .works__box {
     margin: 0 15px 15px 0;
+  }
+
+  .works__box:nth-child(even) {
+    margin-right: 0;
+  }
+
+  .works__box:nth-child(odd) {
+    margin-right: 15px;
+  }
+
+  .works__box:nth-child(3n) {
+    margin-right: none;
+  }
+
+  .works__img {
+    max-width: 300px;
+    max-height: 300px;
   }
 
   .reviews__inner {
@@ -1058,34 +1082,26 @@ body._lock {
             justify-content: center;
   }
 
+  .results__item {
+    margin-bottom: 14px;
+  }
+
+  .results__item--clients {
+    margin-right: 0;
+  }
+
+  .results__item--review {
+    margin-right: 0;
+  }
+
   .contact__box {
     margin-right: 10px;
   }
 }
 
-@media (max-width: 1194px) {
-  .results__item {
-    margin-bottom: 14px;
-  }
-
-  .results__item:last-child {
-    margin-right: 15px;
-  }
-}
-
-@media (max-width: 1148px) {
-  .works__box {
-    margin-right: 0;
-  }
-
-  .works__box:nth-child(odd) {
-    margin-right: 15px;
-  }
-}
-
 @media (max-width: 992px) {
-  .header__top .menu-icon {
-    top: 39px;
+  .header__top {
+    top: 60px;
   }
 
   .header__top .menu__list {
@@ -1098,14 +1114,21 @@ body._lock {
     left: 0;
   }
 
+  .header__top.sticky {
+    padding: 55px 15px;
+  }
+
   .header .menu-icon {
+    position: absolute;
+    right: 30px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
     z-index: 2;
     display: block;
     width: 30px;
     height: 18px;
-    position: absolute;
-    top: 20px;
-    right: 30px;
   }
 
   .header .menu-icon._active span {
@@ -1168,7 +1191,7 @@ body._lock {
   }
 
   .header .menu .logo {
-    position: relative;
+    position: absolute;
     z-index: 2;
   }
 
@@ -1177,7 +1200,6 @@ body._lock {
     top: 0;
     left: -100%;
     width: 100%;
-    height: 100%;
     background-color: #7792E0;
     -webkit-transition: left 0.3s;
     -o-transition: left 0.3s;
@@ -1214,24 +1236,6 @@ body._lock {
     font-size: 60px;
   }
 
-  .services__item {
-    max-width: 100%;
-    padding-top: 80px;
-  }
-
-  .reviews__inner {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-
-  .reviews__box {
-    margin-bottom: 30px;
-  }
-}
-
-@media (max-width: 860px) {
   .skills__inner {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1269,28 +1273,36 @@ body._lock {
             justify-content: start;
   }
 
+  .services__item {
+    max-width: 100%;
+    padding-top: 80px;
+  }
+
   .services__title {
     margin-bottom: 15px;
   }
 
-  .works__inner {
+  .reviews__inner {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+
+  .reviews__box {
     margin-bottom: 30px;
-  }
-
-  .works__li {
-    margin: 0 auto 15px;
-  }
-
-  .works__btn {
-    font-size: 18px;
   }
 }
 
 @media (max-width: 768px) {
+  .container--works {
+    max-width: 600px;
+  }
+
+  .container--results {
+    max-width: 500px;
+  }
+
   .section {
     padding: 50px 0;
   }
@@ -1311,10 +1323,6 @@ body._lock {
     height: 10px;
     left: 0;
     bottom: 3px;
-  }
-
-  .header__top {
-    top: 15px;
   }
 
   .header__title {
@@ -1343,55 +1351,64 @@ body._lock {
     margin-bottom: 15px;
   }
 
-  .works__link {
-    max-height: 300px;
+  .services__item--project::before,
+  .services__item--cms::before,
+  .services__item--site::before {
+    -webkit-transform: scale(0.67);
+        -ms-transform: scale(0.67);
+            transform: scale(0.67);
+  }
+
+  .works {
+    padding-bottom: 50px;
+  }
+
+  .works__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 30px;
+  }
+
+  .works__btn {
+    margin: 0;
+  }
+
+  .works__box {
+    margin-right: 0;
+  }
+
+  .works__box:nth-child(odd) {
+    margin-right: 0;
+  }
+
+  .works__box:nth-child(3n) {
+    margin-right: none;
   }
 
   .works__img {
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 100%;
   }
 
   .results__item {
-    margin-right: 14px;
-    max-width: 165px;
-    max-height: 170px;
-    padding-top: 68px;
-  }
-
-  .results__item:last-child {
-    margin-right: 0;
+    max-width: 210px;
+    max-height: 200px;
+    padding: 20px;
   }
 
   .results__item--works::before,
   .results__item--clients::before,
   .results__item--coffe::before,
   .results__item--review::before {
-    -webkit-transform: scale(0.44);
-        -ms-transform: scale(0.44);
-            transform: scale(0.44);
-    top: 1px;
-    left: 19%;
-  }
-
-  .results__item--clients::before {
-    left: 23%;
-  }
-
-  .results__item--coffe::before {
-    left: 24%;
-  }
-
-  .results__item--review {
-    padding-top: 76px;
-  }
-
-  .results__item--review::before {
-    left: 27%;
+    -webkit-transform: scale(0.5);
+        -ms-transform: scale(0.5);
+            transform: scale(0.5);
   }
 
   .results__text {
     font-size: 14px;
+    padding-top: 0;
   }
 
   .results__quantity {
@@ -1423,64 +1440,41 @@ body._lock {
   }
 }
 
-@media (max-width: 731px) {
-  .results__item:nth-child(3) {
-    margin-right: 0;
+@media (max-width: 576px) {
+  .container--results {
+    max-width: 350px;
   }
-}
 
-@media (max-width: 670px) {
-  .services__item--project::before,
-  .services__item--cms::before,
-  .services__item--site::before {
-    -webkit-transform: scale(0.67);
-        -ms-transform: scale(0.67);
-            transform: scale(0.67);
+  .header__top {
+    top: 40px;
+  }
+
+  .header__top.sticky {
+    padding: 40px 15px;
+  }
+
+  .header .menu .logo__img {
+    width: 65px;
+    text-align: center;
+    height: 55px;
+  }
+
+  .header .menu .logo {
+    width: 70px;
+    text-align: center;
+    height: 60px;
+  }
+
+  .header__title {
+    font-size: 20px;
+  }
+
+  .header__text {
+    font-size: 30px;
   }
 
   .services__title {
     font-size: 20px;
-  }
-}
-
-@media (max-width: 649px) {
-  .works__box {
-    margin-right: 15px;
-  }
-
-  .works__box:nth-child(3n) {
-    margin-right: 0;
-  }
-
-  .works__link {
-    max-width: 165px;
-  }
-
-  .works__img {
-    max-width: 165px;
-    max-height: 165px;
-  }
-}
-
-@media (max-width: 576px) {
-  .header__top .menu-icon {
-    top: 30px;
-    right: 20px;
-  }
-
-  .header .menu-icon {
-    top: 12px;
-    right: 5px;
-  }
-
-  .header .menu .logo__img {
-    width: 110px;
-    height: 36px;
-  }
-
-  .header .menu .logo {
-    width: 115px;
-    height: 42px;
   }
 
   .reviews {
@@ -1540,6 +1534,11 @@ body._lock {
     border-radius: 50%;
   }
 
+  .results__item {
+    margin-right: 0;
+    max-width: 70%;
+  }
+
   .form__row {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1550,75 +1549,19 @@ body._lock {
   .form__item {
     margin-right: 0;
   }
-}
 
-@media (max-width: 563px) {
-  .works__box {
-    margin-right: 0;
-    margin-bottom: 15px;
+  .footer {
+    padding: 10px 0;
   }
 
-  .works__box:nth-child(odd) {
-    margin-right: 15px;
-  }
-}
-
-@media (max-width: 552px) {
-  .results__item:nth-child(3) {
-    margin-right: 14px;
+  .footer .logo {
+    width: 50px;
+    height: 50px;
   }
 
-  .results__item:nth-child(2) {
-    margin-right: 0;
-  }
-}
-
-@media (max-width: 379px) {
-  .works__box:nth-child(odd) {
-    margin-right: 10px;
-  }
-}
-
-@media (max-width: 374px) {
-  .works__box {
-    margin-right: 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-
-  .works__box:nth-child(odd) {
-    margin-right: 0;
-  }
-}
-
-@media (max-width: 373px) {
-  .results__item {
-    width: 100%;
-    margin-right: 7px;
-  }
-
-  .results__item:nth-child(3),
-  .results__item:nth-child(2),
-  .results__item:last-child {
-    margin-right: 7px;
-  }
-}
-
-@media (max-width: 300px) {
-  .header__title {
-    font-size: 20px;
-  }
-
-  .header__text {
-    font-size: 30px;
+  .footer .logo__img {
+    width: 50px;
+    height: 50px;
   }
 }
 
